# libNamedPipe

./: CMakeLists.txt  INamedPipe.h  NamedPipe.h  NamedPipeServer.cpp  NamedPipeServer.h  PosixNamedPipe.cpp  PosixNamedPipe.h  WinNamedPipe.cpp  WinNamedPipe.h
examples/: NamedPipeTestClient.cpp  NamedPipeTestServer.cpp  SimpleServer.cpp  SimpleServer.h
